# repeat_pattern

./: README.md  setup.cfg
repeat_pattern/: repeat_pattern.py
