[metadata]
name = repeat_pattern
version = 0.0
description = repeat a random sequence of colors of increasingly difficulty
long_description = file: README.md
long_description_content_type = text/markdown
url = https:
author = Chad Larson
author_email = techchad2@gmail.com
license = MIT
license_file = LICENSE

[options]
packages = find:
install_requires:
    pygame >= 2.1.0
python_requires = >= 3.7

[options.entry_points]
console_scripts =
    repeat_pattern = repeat_pattern.repeat_pattern:main